k8s/services/matrix/app/synapse-admin/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse-admin
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: matrix
  hostnames:
    - admin.matrix.lama-corp.space
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: synapse-admin
          port: 80
